Map pointer events, touch events so event-id's are small.

Bug: 747642
Change-Id: I132ba496a68121bf09a3826d456b75fab43401cb
Reviewed-on: https://chromium-review.googlesource.com/582429
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Eugene Girard <girard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489398}
Former-commit-id: 1f6bcbedab3fc3918c7467c135a4f6bd2d4bf70d